<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="generatedString"
            type="com.iav.contestdataprovider.model.GeneratedString" />

        <variable
            name="viewModel"
            type="com.iav.contestdataprovider.viewmodel.StringViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".adapter.GeneratedStringAdapter">

        <TextView
            android:id="@+id/tv_random_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@{generatedString.value}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/item_StringHeader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_string_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{`Length: ` + generatedString.length}"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="@string/item_StringLength" />


        </LinearLayout>
        <TextView
            android:id="@+id/tv_creation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@{`Created at: ` + generatedString.created}"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="@string/item_CreatedTime" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/color_red"

            android:elevation="2dp"
            android:gravity="center"
            android:paddingHorizontal="25dp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>
