<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.iav.contestdataprovider.viewmodel.StringViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/color_lightgry"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <EditText
            android:id="@+id/et_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_length"
            android:inputType="number"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext_background"
            android:layout_alignParentTop="true" />


        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_strings"
            android:layout_below="@id/et_length"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:onClick="onGenerateClick"
            android:backgroundTint="@color/button_color"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:elevation="4dp" />
        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:textSize="16sp"
            android:layout_gravity="right"
            android:gravity="center"
            android:onClick="onClearAllClick"
            android:visibility="gone"
            android:paddingHorizontal="30dp"
            android:backgroundTint="@color/color_gry"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:elevation="4dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_generated_strings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_generate"
            android:layout_above="@id/view_padding"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:padding="8dp"
            tools:listitem="@layout/item_generated_string" />


        <View
            android:id="@+id/view_padding"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</layout>
